CMB|20230314|Update Folders

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,2 @@
-Reseaux de neurones/Wang
-Reseaux de neurones/Wang_Data_Augmentation
+Reseaux de neurones/Wang/*.jpg
+Reseaux de neurones/Wang_Data_Augmentation/*.png
